# GeoAgent

./: .env.example  .gitignore  Dockerfile  README.md  geo-agent-prompt.md  pyproject.toml  requirements.txt
geo_agent/: __init__.py  __main__.py  config.py  main.py  pipeline.py
geo_agent/bot/: formatters.py  handlers.py  telegram_bot.py
geo_agent/extractors/: exif.py  visual.py
geo_agent/models/: __init__.py  schemas.py
geo_agent/reasoning/: final.py  hypotheses.py  verify.py
geo_agent/tools/: base.py  maps.py  reverse_image.py  search.py
geo_agent/utils/: display.py  image.py  parse.py
